add cross validation for RFC and SVM

--- a/Zadanie 2 i 3 wyklad 1.ipynb
+++ b/Zadanie 2 i 3 wyklad 1.ipynb
@@ -5,9 +5,7 @@
     "colab": {
       "name": "Copy of Untitled0.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNwzYFVKDu/K8mNcX5prpMZ",
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -15,16 +13,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/MarekOchocki/InteligencjaObliczeniowa/blob/master/Zadanie%202%20i%203%20wyklad%201.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -43,11 +31,11 @@
       "metadata": {
         "id": "5iQryd_5EbF9",
         "colab_type": "code",
+        "outputId": "3617a4fd-1d5a-4931-9ef4-1d93a078eedb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "01920f88-71d9-47da-ab9f-e643880f2484"
+        }
       },
       "source": [
         "%tensorflow_version 1.x\n",
@@ -55,7 +43,7 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -106,18 +94,18 @@
       "metadata": {
         "id": "16_O1Re7EyZx",
         "colab_type": "code",
+        "outputId": "90fe5f08-90b1-421c-812a-8e27a44c8f2b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "199f176a-254d-49e2-979a-a95e20e1a947"
+          "height": 68
+        }
       },
       "source": [
         "from keras.datasets import mnist\n",
         "\n",
         "(train_images, train_labels), (test_images, test_labels) = mnist.load_data()"
       ],
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,6 +113,14 @@
             "Using TensorFlow backend.\n"
           ],
           "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading data from https://s3.amazonaws.com/img-datasets/mnist.npz\n",
+            "11493376/11490434 [==============================] - 2s 0us/step\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -154,7 +150,64 @@
         "colab_type": "text"
       },
       "source": [
-        "# **SVC model without deskew preprocessing**"
+        "# **SVM model without deskew preprocessing**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1GL3huTvbfMc",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "dad9a034-0a89-4290-d262-8cb6a912c4c2"
+      },
+      "source": [
+        "from sklearn import svm\n",
+        "from sklearn.metrics import classification_report, confusion_matrix\n",
+        "\n",
+        "def cross_validate_SVM(k, images, labels, C, gamma):\n",
+        "  all_scores = []\n",
+        "  num_val_samples = int(len(images)/k)\n",
+        "  for i in range(k):\n",
+        "    val_data = images[i * num_val_samples: (i + 1) * num_val_samples]\n",
+        "    val_targets = labels[i * num_val_samples: (i + 1) * num_val_samples]\n",
+        "\n",
+        "    partial_train_data = np.concatenate((images[:i * num_val_samples], images[(i + 1) * num_val_samples:]), axis=0)\n",
+        "    partial_train_targets = np.concatenate((labels[:i * num_val_samples],labels[(i + 1) * num_val_samples:]), axis=0)\n",
+        "    \n",
+        "    model = svm.SVC(C=C,gamma=gamma)\n",
+        "    model.fit(partial_train_data, partial_train_targets)\n",
+        "\n",
+        "    \n",
+        "    pred_labels = model.predict(val_data)\n",
+        "    mask = pred_labels==val_targets\n",
+        "    correct = np.count_nonzero(mask)\n",
+        "\n",
+        "    all_scores.append(correct*100.0/pred_labels.size)\n",
+        "  return sum(all_scores) / len(all_scores)\n",
+        "\n",
+        "cross_validation_results = []\n",
+        "\n",
+        "for C in np.arange(1.8, 3.0, 0.1):\n",
+        "  for gamma in np.arange(0.3, 1.1, 0.1):\n",
+        "    cross_validation_results.append([cross_validate_SVM(10, imData[:1000], train_labels[:1000], C, gamma), C, gamma])\n",
+        "\n",
+        "results = [i[0] for i in cross_validation_results]\n",
+        "best_result = cross_validation_results[results.index(max(results))]\n",
+        "print(\"Best C and gamma: \" + str(best_result[1]) + \", \" + str(best_result[2]))"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Best C and gamma: 1.8, 0.3\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -162,17 +215,15 @@
       "metadata": {
         "id": "mGG8XDNMFAkl",
         "colab_type": "code",
+        "outputId": "116b3c41-cea3-4626-cde5-e87eedff9bda",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 493
-        },
-        "outputId": "2d5e0be3-e34c-4aae-95e5-38f6890c47d9"
+        }
       },
       "source": [
-        "from sklearn import svm\n",
-        "from sklearn.metrics import classification_report, confusion_matrix\n",
         "\n",
-        "model = svm.SVC(C=15.5,gamma=0.7)\n",
+        "model = svm.SVC(C=1.8,gamma=0.3)\n",
         "model = model.fit(imData[0:trainingSetsCount,:],train_labels[0:trainingSetsCount])\n",
         "\n",
         "pred_labels = model.predict(imData[trainingSetsCount:lastTestingSetIndex,:])\n",
@@ -184,34 +235,34 @@
         "print(cm)\n",
         "print(classification_report(train_labels[trainingSetsCount:lastTestingSetIndex], pred_labels))"
       ],
-      "execution_count": 6,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "91.0\n",
-            "[[38  0  0  0  0  0  1  0  0  0]\n",
+            "90.75\n",
+            "[[38  0  1  0  0  0  0  0  0  0]\n",
             " [ 0 37  0  0  0  0  0  0  0  0]\n",
             " [ 0  0 32  0  0  0  0  2  0  1]\n",
-            " [ 0  0  1 32  0  0  0  0  0  1]\n",
-            " [ 0  0  0  0 38  2  4  0  0  2]\n",
+            " [ 0  0  1 31  0  1  0  0  0  1]\n",
+            " [ 0  0  0  0 39  1  4  0  1  1]\n",
             " [ 0  0  2  1  0 36  0  0  1  1]\n",
             " [ 1  1  0  0  1  0 36  0  1  0]\n",
-            " [ 0  0  1  2  1  0  0 51  0  0]\n",
-            " [ 0  1  0  0  0  2  0  0 34  1]\n",
+            " [ 0  0  5  1  1  0  0 48  0  0]\n",
+            " [ 0  1  0  0  0  0  0  0 36  1]\n",
             " [ 3  0  0  0  0  0  1  1  0 30]]\n",
             "              precision    recall  f1-score   support\n",
             "\n",
             "           0       0.90      0.97      0.94        39\n",
             "           1       0.95      1.00      0.97        37\n",
-            "           2       0.89      0.91      0.90        35\n",
-            "           3       0.91      0.94      0.93        34\n",
-            "           4       0.95      0.83      0.88        46\n",
-            "           5       0.90      0.88      0.89        41\n",
-            "           6       0.86      0.90      0.88        40\n",
-            "           7       0.94      0.93      0.94        55\n",
-            "           8       0.94      0.89      0.92        38\n",
-            "           9       0.83      0.86      0.85        35\n",
+            "           2       0.78      0.91      0.84        35\n",
+            "           3       0.94      0.91      0.93        34\n",
+            "           4       0.95      0.85      0.90        46\n",
+            "           5       0.95      0.88      0.91        41\n",
+            "           6       0.88      0.90      0.89        40\n",
+            "           7       0.94      0.87      0.91        55\n",
+            "           8       0.92      0.95      0.94        38\n",
+            "           9       0.86      0.86      0.86        35\n",
             "\n",
             "    accuracy                           0.91       400\n",
             "   macro avg       0.91      0.91      0.91       400\n",
@@ -235,18 +286,71 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tPSQ6B5wGNeN",
+        "id": "1j6M4LEr5emZ",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 493
+          "height": 34
         },
-        "outputId": "fb147039-7ae1-4fb5-bf4e-35ab16ffa881"
+        "outputId": "3860144f-ddcb-40a0-e961-d9fdbd76f2ee"
       },
       "source": [
         "from sklearn.ensemble import RandomForestClassifier\n",
+        "def cross_validate_RFC(k, images, labels, max_depth, n_estimators, max_features):\n",
+        "  all_scores = []\n",
+        "  num_val_samples = int(len(images)/k)\n",
+        "  for i in range(k):\n",
+        "    val_data = images[i * num_val_samples: (i + 1) * num_val_samples]\n",
+        "    val_targets = labels[i * num_val_samples: (i + 1) * num_val_samples]\n",
         "\n",
-        "rfc =  RandomForestClassifier(max_depth=15, n_estimators=100, max_features=60)\n",
+        "    partial_train_data = np.concatenate((images[:i * num_val_samples], images[(i + 1) * num_val_samples:]), axis=0)\n",
+        "    partial_train_targets = np.concatenate((labels[:i * num_val_samples],labels[(i + 1) * num_val_samples:]), axis=0)\n",
+        "    \n",
+        "    model = RandomForestClassifier(max_depth=max_depth, n_estimators=n_estimators, max_features=max_features)\n",
+        "    model.fit(partial_train_data, partial_train_targets)\n",
+        "\n",
+        "    \n",
+        "    pred_labels = model.predict(val_data)\n",
+        "    mask = pred_labels==val_targets\n",
+        "    correct = np.count_nonzero(mask)\n",
+        "\n",
+        "    all_scores.append(correct*100.0/pred_labels.size)\n",
+        "  return sum(all_scores) / len(all_scores)\n",
+        "\n",
+        "\n",
+        "cross_validation_results = []\n",
+        "\n",
+        "for n_estimators in range(5, 100, 5):\n",
+        "  cross_validation_results.append([cross_validate_RFC(10, imData[:1000], train_labels[:1000], 15, n_estimators, 60), n_estimators])\n",
+        "\n",
+        "results = [i[0] for i in cross_validation_results]\n",
+        "best_result = cross_validation_results[results.index(max(results))]\n",
+        "print(\"Best n_estimators: \" + str(best_result[1]))"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Best n_estimators: 85\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tPSQ6B5wGNeN",
+        "colab_type": "code",
+        "outputId": "c891971c-c01b-4a95-e091-6c42512ea6da",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 493
+        }
+      },
+      "source": [
+        "rfc = RandomForestClassifier(max_depth=15, n_estimators=85, max_features=60)\n",
         "rfc = rfc.fit(imData[0:trainingSetsCount,:],train_labels[0:trainingSetsCount])\n",
         "\n",
         "pred_labels = rfc.predict(imData[trainingSetsCount:lastTestingSetIndex,:])\n",
@@ -259,38 +363,38 @@
         "print(cm)\n",
         "print(classification_report(train_labels[trainingSetsCount:lastTestingSetIndex], pred_labels))"
       ],
-      "execution_count": 7,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "83.75\n",
-            "[[27  3  1  0  0  0  8  0  0  0]\n",
+            "83.25\n",
+            "[[26  1  2  0  0  0 10  0  0  0]\n",
             " [ 0 36  0  0  0  1  0  0  0  0]\n",
-            " [ 0  0 32  0  1  1  0  0  0  1]\n",
-            " [ 0  0  1 30  0  3  0  0  0  0]\n",
-            " [ 0  0  0  0 43  0  2  0  0  1]\n",
-            " [ 0  0  0  2  1 34  0  0  1  3]\n",
-            " [ 1  1  0  0  2  2 33  0  0  1]\n",
+            " [ 0  0 32  0  0  1  0  0  1  1]\n",
+            " [ 0  0  2 29  0  3  0  0  0  0]\n",
+            " [ 0  0  0  0 43  1  2  0  0  0]\n",
+            " [ 0  0  0  2  1 30  1  1  2  4]\n",
+            " [ 1  0  0  0  2  2 34  0  1  0]\n",
             " [ 0  0  4  2  1  0  0 48  0  0]\n",
-            " [ 3  4  0  0  1  5  0  0 24  1]\n",
-            " [ 1  1  2  0  1  1  0  1  0 28]]\n",
+            " [ 1  4  0  0  1  3  0  0 27  2]\n",
+            " [ 1  1  2  0  0  1  0  2  0 28]]\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.84      0.69      0.76        39\n",
-            "           1       0.80      0.97      0.88        37\n",
-            "           2       0.80      0.91      0.85        35\n",
-            "           3       0.88      0.88      0.88        34\n",
-            "           4       0.86      0.93      0.90        46\n",
-            "           5       0.72      0.83      0.77        41\n",
-            "           6       0.77      0.82      0.80        40\n",
-            "           7       0.98      0.87      0.92        55\n",
-            "           8       0.96      0.63      0.76        38\n",
+            "           0       0.90      0.67      0.76        39\n",
+            "           1       0.86      0.97      0.91        37\n",
+            "           2       0.76      0.91      0.83        35\n",
+            "           3       0.88      0.85      0.87        34\n",
+            "           4       0.90      0.93      0.91        46\n",
+            "           5       0.71      0.73      0.72        41\n",
+            "           6       0.72      0.85      0.78        40\n",
+            "           7       0.94      0.87      0.91        55\n",
+            "           8       0.87      0.71      0.78        38\n",
             "           9       0.80      0.80      0.80        35\n",
             "\n",
-            "    accuracy                           0.84       400\n",
-            "   macro avg       0.84      0.84      0.83       400\n",
-            "weighted avg       0.85      0.84      0.84       400\n",
+            "    accuracy                           0.83       400\n",
+            "   macro avg       0.83      0.83      0.83       400\n",
+            "weighted avg       0.84      0.83      0.83       400\n",
             "\n"
           ],
           "name": "stdout"
@@ -312,11 +416,11 @@
       "metadata": {
         "id": "XoAN91NcHuBv",
         "colab_type": "code",
+        "outputId": "1476ad4a-c37b-42bc-f2eb-7c4910efe6c1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 187
-        },
-        "outputId": "1476ad4a-c37b-42bc-f2eb-7c4910efe6c1"
+        }
       },
       "source": [
         "from keras import models\n",
@@ -335,7 +439,7 @@
         "test_images_for_network = test_images.reshape((10000, 28 * 28))\n",
         "test_images_for_network = test_images_for_network.astype('float32') / 255"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -376,11 +480,11 @@
       "metadata": {
         "id": "DwsjrawdIrDG",
         "colab_type": "code",
+        "outputId": "31cac635-3d87-4738-d2fb-998d778b012b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "31cac635-3d87-4738-d2fb-998d778b012b"
+        }
       },
       "source": [
         "network.fit(train_images_for_network, encoded_train_labels, epochs=5, batch_size=128)\n",
@@ -396,7 +500,7 @@
         "print(cm)\n",
         "print(classification_report(test_labels, pred_labels))\n"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -492,11 +596,11 @@
       "metadata": {
         "id": "-I6-Sjp-LDjl",
         "colab_type": "code",
+        "outputId": "70d84209-818e-4b4e-c4fb-1fcf1d70373f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 547
-        },
-        "outputId": "70d84209-818e-4b4e-c4fb-1fcf1d70373f"
+        }
       },
       "source": [
         "train_images_raw = train_images.reshape((60000, 28 * 28))\n",
@@ -514,7 +618,7 @@
         "print(cm)\n",
         "print(classification_report(test_labels[0:testingSetsCount], pred_labels))"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -575,11 +679,11 @@
       "metadata": {
         "id": "3CsIqfNXOHpY",
         "colab_type": "code",
+        "outputId": "0c3dfadb-3f99-4a8c-ea22-325fd1d0d9c2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 493
-        },
-        "outputId": "0c3dfadb-3f99-4a8c-ea22-325fd1d0d9c2"
+        }
       },
       "source": [
         "rfc = RandomForestClassifier(max_depth=15, n_estimators=100, max_features=60)\n",
@@ -595,7 +699,7 @@
         "print(cm)\n",
         "print(classification_report(test_labels[0:testingSetsCount], pred_labels))"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
